<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_title"
    tools:context="com.fkmichiura.project.fittraining.Activities.CreditsActivity">

    <Button
        android:id="@+id/back_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_rounded_button"
        android:text="@string/back_button" />

    <ImageView
        android:id="@+id/credits_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_credits"
        android:contentDescription="@string/credits_image" />

    <ImageView
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/img_logo"
        android:contentDescription="@string/app_logo" />

    <ListView
        android:id="@+id/profile_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/credits_img"
        android:layout_above="@id/back_btn">

    </ListView>

</RelativeLayout>
